--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+node_modules/
+
+/client/build
+
+Thumbs.db
+.DS_Store
+/cleint/.env.local
+/cleint/.env.development.local
+/cleint/.env.test.local
+/cleint/.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
