--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14"
   },
